kc-chart-argocd/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kc-cicd-service-argocd
  namespace: keepcoding
  labels:
    app: kc-cicd-service-argocd
spec:
  selector:
    app: kc-cicd-app-argocd
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
